<resources>
    <string name="app_name">LeControl</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_area_detail">AreaDetail</string>
    <string name="title_activity_device">Device</string>
    <string name="device_type_name">Device Type</string>

    <string name="cam_speed">风速</string>
    <string name="cam_speed1">微风</string>
    <string name="cam_speed2">低风</string>
    <string name="cam_speed3">中风</string>
    <string name="cam_speed4">高风</string>
    <string name="cam_speed5">强风</string>

    <string name="cam_mode">模式</string>
    <string name="cam_mode_heating">制热</string>
    <string name="cam_mode_refrigeration">制冷</string>
    <string name="cam_mode_ventilation">通风</string>
    <string name="cam_mode_desiccant">除湿</string>

    <string name="tcp_error">与智能硬件连接出错，请确保已接入家庭网络</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_config">配置</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
