<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cam_speed"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cam_speed_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_text_margin_left"
        android:layout_marginStart="@dimen/main_text_margin_left"
        android:text="@string/cam_speed"
        android:textColor="@color/mainTextColor" />

    <RadioGroup
        android:id="@+id/cam_speed_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cam_speed_textView"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cam_speed1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_speed1"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_speed2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_speed2"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_speed3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_speed3"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_speed4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_speed4"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_speed5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_speed5"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

    </RadioGroup>

</RelativeLayout>