<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cam_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cam_mode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_text_margin_left"
        android:layout_marginStart="@dimen/main_text_margin_left"
        android:text="@string/cam_mode"
        android:textColor="@color/mainTextColor" />

    <RadioGroup
        android:id="@+id/cam_mode_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cam_mode_heating_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_mode_heating"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_mode_refrigeration_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_mode_refrigeration"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_mode_ventilation_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_mode_ventilation"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/cam_mode_desiccant_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_mode_desiccant"
            android:textColor="@color/mainTextColor"
            android:visibility="gone" />

    </RadioGroup>


</RelativeLayout>